# clinical-capacity

./: README.md  assets.yml  pyproject.toml  run_clinical_capacity.sh
assumptions/: appointment_frequency_bin.sql  engaged_7d_pct_last_8_cohorts_avg.sql  followup_appointment_mode_distribution.sql  inital_appointment_mode_distribution.sql  time_to_first_appt_8_wk_avg.sql  time_to_followup_appt_8_wk_avg.sql
capacity_plan/: .gitignore  dbt_project.yml
capacity_plan/archive/: referral_count_arima_model.sql
capacity_plan/archive/actuals/: actual_visits_scheduled.sql
capacity_plan/models/: prophet_run.ipynb  sources.yml
capacity_plan/models/actuals/: appointment_actuals_week.sql
capacity_plan/models/assumptions/: appointment_frequency_bin.sql  engaged_7d_pct_last_8_cohorts_avg.sql  followup_appointment_mode_distribution.sql  inital_appointment_mode_distribution.sql  supply_hours.sql  time_to_first_appt_8_wk_avg.sql  time_to_followup_appt_8_wk_avg.sql
capacity_plan/models/referral/: referral_count_model_staging.sql  referral_count_prophet_model.sql
capacity_plan/models/reporting/: demand_final.sql  demand_final_daily.sql  demand_final_presentation.sql  demand_final_presentation_historical.sql  demand_final_presentation_week_12.sql  supply_demand.sql  (+3 more)
reporting/: demand_final.sql  demand_final_daily.sql  demand_final_presentation.sql  demand_final_presentation_week_12.sql
reporting/staging/: demand_assumptions_considered.sql  demand_assumptions_cosidered_2.sql  projected_date_followup_appointments.sql  projected_date_initial_appointments.sql
(+7 files in other folders)
