[tool.poetry]
name = "clinical-capacity"
version = "0.1.0"
description = ""
authors = ["filusIcon <filustre@iconhealthco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = ">=2.1.0"
jupyter = "^1.1.1"
lab = "^8.4"
pandas-gbq = "^0.29.1"
pyarrow = ">=10.0.1"
dbt-bigquery = "^1.9.2"
prophet = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
